--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -12,7 +12,7 @@
 
 .heading span {
   font-size: 4rem;
-  -webkit-text-stroke: #fb923c 2px;
+  -webkit-text-stroke: #f87171 2px;
 }
 
 @media (min-width: 400px) {
