--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -2,7 +2,7 @@
   width: 200px;
   margin-left: 20px;
   padding-top: 50px;
-  padding-bottom: 50px;
+  padding-bottom: 10px;
 }
 
 .heading {
@@ -12,7 +12,7 @@
 
 .heading span {
   font-size: 4rem;
-  -webkit-text-stroke: #f87171 2px;
+  -webkit-text-stroke: purple 2px;
 }
 
 @media (min-width: 400px) {
