--- a/src/Components/MainForm/MainForm.module.css
+++ b/src/Components/MainForm/MainForm.module.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  min-height: 40vh;
 }
 
 .form_wrapper {
@@ -11,5 +11,6 @@
 }
 
 .btn_box {
-  margin: 50px 0;
+  margin: 50px auto;
+  text-align: center;
 }
