--- a/src/Components/PickCoffee/PickCoffee.module.css
+++ b/src/Components/PickCoffee/PickCoffee.module.css
@@ -5,35 +5,61 @@
 }
 
 .input_box {
-  border: solid 2px #fff;
-  outline: solid 3px #4f46e5;
-  width: fit-content;
-  padding: 20px 40px;
+  border: solid 0.5px #fff;
+  min-width: 260px;
+  margin-bottom: 80px;
+  padding: 20px 30px;
   border-radius: 10px;
+  text-align: center;
+  align-self: center;
+  transition: all 0.2s;
+  box-shadow: #4e46e5c8 0px 50px 100px 1px, rgba(255, 166, 0, 0.5) 0px 20px 50px 10px,
+    #4e46e5c8 0px -2px 6px 0px inset;
+}
+
+.input_box:hover {
+  transform: scale(1.01);
 }
 
 .input_box_title {
   font-size: 18px;
-  filter: drop-shadow(0 10px 10px rgb(0, 0, 0, 0.5));
+  display: flex;
+  justify-content: space-between;
+  font-weight: 600;
 }
 
-.h3 {
-  margin: 0;
+.input_box_title span {
+  font-weight: 800;
+  font-size: 20px;
+  background-image: linear-gradient(to left, #ed8936, #ed64a6);
+  color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
+  padding: 3px 6px;
+  border-radius: 5px;
+  transition: color 0.2s ease;
 }
 
-.input_box {
-  min-width: 260px;
-  padding: 20px 60px;
-  text-align: center;
-  align-self: center;
-
-  font-size: 22px;
+.grid_four {
+  grid-template-columns: repeat(4, 1fr);
 }
 
+.grid {
+  grid-template-columns: repeat(3, 1fr);
+}
 .result_box {
   width: fit-content;
+  margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
   align-items: center;
   gap: 30px;
+}
+.h3 {
+  font-size: 28px;
+}
+
+@media (min-width: 768px) {
+  .onput_box {
+    padding: 20px 40px;
+  }
 }
