--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,8 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background: linear-gradient(#000428, #004e92);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -16,11 +14,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #e66465;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #de8787;
 }
 
 body {
@@ -48,16 +46,14 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #031089;
   cursor: pointer;
   transition: border-color 0.25s;
+  color: #fff;
 }
+
 button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  border-color: #e66465;
 }
 
 @media (prefers-color-scheme: light) {
@@ -66,7 +62,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #e66465;
   }
   button {
     background-color: #f9f9f9;
