--- a/src/Components/Heading/Heading.module.css
+++ b/src/Components/Heading/Heading.module.css
@@ -1,5 +1,5 @@
 .text {
-  font-size: 14px;
+  font-size: 12px;
   margin: 0;
   margin: 10px 18px 14px;
 }
@@ -9,7 +9,7 @@
 }
 
 .heading_box {
-  margin: 0 auto 10px;
+  margin: 0 auto;
   text-align: center;
 }
 
@@ -26,9 +26,9 @@
   }
 
   .text {
-    font-size: 18px;
+    font-size: 16px;
     margin: 0;
-    margin: 20px 18px 24px;
+    margin: 10px 18px 14px;
   }
 
   .h2 {
@@ -41,13 +41,8 @@
     width: fit-content;
   }
 
-  .h2 {
-    margin-top: 50px;
-  }
-
   .text {
     font-size: 18px;
-    margin: 0;
-    margin: 40px 18px;
+    margin: 20px 18px;
   }
 }
